--- a/package.json
+++ b/package.json
@@ -40,5 +40,7 @@
   },
   "devDependencies": {
     "gh-pages": "^6.2.0"
-  }
+  },
+
+  "homepage": "https://mariazhenchur.github.io/mood-face-recognition"
 }
